add slides to metric example

--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -10,6 +10,8 @@
 
 @import 'layout';
 
+// Import the nord colour swatches
+@import "./theme/template/palette/nord.scss";
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
@@ -187,23 +189,23 @@ html.reveal-full-page {
 	visibility: inherit;
 }
 	.reveal .slides section .fragment.highlight-red.visible {
-		color: #ff2c2d
+		color: $nord11
 	}
 	.reveal .slides section .fragment.highlight-green.visible {
-		color: #17ff2e;
+		color: $nord14;
 	}
 	.reveal .slides section .fragment.highlight-blue.visible {
-		color: #1b91ff;
+		color: $nord10;
 	}
 
 .reveal .slides section .fragment.highlight-current-red.current-fragment {
-	color: #ff2c2d
+	color: $nord11
 }
 .reveal .slides section .fragment.highlight-current-green.current-fragment {
-	color: #17ff2e;
+	color: $nord14;
 }
 .reveal .slides section .fragment.highlight-current-blue.current-fragment {
-	color: #1b91ff;
+	color: $nord10;
 }
 
 
