--- a/css/theme/source/nord.scss
+++ b/css/theme/source/nord.scss
@@ -121,3 +121,28 @@ $borderColour: $nord7;
     width: 15px;
   }
 }
+
+/*********************************************
+ * BOX SHADOW FOR IMAGES
+ *********************************************/
+img {
+  //width: 250px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  //text-align: center;
+}
+
+
+/*********************************************
+ * COLUMN LAYOUT - https://www.w3schools.com/howto/howto_css_two_columns.asp
+ *********************************************/
+.column {
+  float: left;
+  width: 50%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
